test/language/spec/stages/invalid/orphan_fn_block.topo
// TEST: fn block without matching function declaration
// EXPECT-ERROR: no matching function declaration

namespace app {
  public:
    fn nonexistent {
      stage<1> doSomething();
    }
}
